docs: update swagger in band entity
